--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:tbwU+MpAhm4bIW+bURwFyySvwgZC/jh5TVjHFso41Gk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://laravel-automation.net
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=laravel_automation
 DB_USERNAME=root
 DB_PASSWORD=
 
